# kun-galgame-oauth-solid-axum

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package.json
backend/: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml
backend/src/: error.rs  lib.rs  main.rs  schema.rs  state.rs
backend/src/config/: mod.rs
backend/src/domain/: client.rs  mod.rs  oauth.rs  user.rs
backend/src/entity/: mod.rs  oauth_clients.rs  oauth_refresh_tokens.rs  oauth_tokens.rs  users.rs
backend/src/infra/: db.rs  metrics.rs  mod.rs  redis.rs  tracing.rs
backend/src/repo/: client_repo.rs  mod.rs  token_repo.rs  user_repo.rs
backend/src/service/: client_service.rs  mod.rs  oauth_service.rs  token_service.rs  user_service.rs
backend/src/web/: middleware.rs  router.rs
backend/src/web/handlers/: auth.rs  health.rs  mod.rs  oauth.rs  users.rs  well_known.rs
frontend/: .gitignore  .prettierignore  Cargo.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
frontend/src/components/app/: Layout.tsx  ThemeToggle.tsx
frontend/src/components/ui/: KunAvatar.tsx  KunBadge.tsx  KunBrand.tsx  KunButton.tsx  KunCard.tsx  KunCheckBox.tsx  KunContent.tsx  KunCopy.tsx  KunDatePicker.tsx  KunDivider.tsx  KunFadeCard.tsx  KunHeader.tsx  KunIcon.tsx  KunImage.tsx  KunInfo.tsx  KunInput.tsx  KunLightbox.tsx  KunLink.tsx  KunLoading.tsx  KunModal.tsx  KunNull.tsx  KunPagination.tsx  KunPopover.tsx  KunScrollShadow.tsx  KunSelect.tsx  KunSlider.tsx  KunSwitch.tsx  KunTab.tsx  KunTextarea.tsx  KunTooltip.tsx  KunUpload.tsx  KunUser.tsx
frontend/src/components/ui/date-picker/: types.ts
frontend/src/components/ui/editor/: KunDualEditorProvider.tsx  KunEditor.tsx
frontend/src/components/ui/icons/: Favicon.tsx  Icon.tsx  Markdown.tsx
frontend/src/components/ui/layout/: KunSidebar.tsx
frontend/src/components/ui/message/: MessageContainer.tsx  MessageItem.tsx  useMessage.tsx
frontend/src/config/: config.d.ts  kunApp.ts
frontend/src/pages/: ClientDetail.tsx  ClientNew.tsx  Clients.tsx  Consent.tsx  Home.tsx  Login.tsx  Profile.tsx  Register.tsx  Ui.tsx
frontend/src/styles/: animations.css  tailwindcss.css
frontend/src/types/: type.d.ts
frontend/src/utils/: api.ts  theme.ts  withDefaults.ts
(+8 files in other folders)
