[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
config = { version = "0.15.15", features = ["yaml"] }
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
] }
tower-http = { version = "0.6.6", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
redis = { version = "0.32.5", features = ["tokio-comp"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1"
once_cell = "1"
time = { version = "0.3", features = ["serde"] }
