[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie-private"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
] }
redis = { version = "0.32.5", features = ["tokio-comp"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
url = "2.5"
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.15.15", features = ["yaml"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5.3"
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
base64 = "0.22"
thiserror = "2.0.16"
anyhow = "1.0"
